# Ca2Attention-From-Calcium-Oscillations-to-Amplitude-Gated-Sparse-Attention

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  analysis.py  corc_paper.md  index.html  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  results_report.txt  run_experiments.py  setup.py  summary.md  tailwind.config.js  tasks.py
agsc_proof/: __init__.py  agsc_proof.py  plots.py
corc_blackbox/: __init__.py  analysis.py  baselines.py  coupling.py  methods_for_paper.md  observables.py  plots.py  reservoir.py  results_interpretation.md  run_all.py  summary.md  tasks.py  units.py
corc_v2/: __init__.py  analysis.py  baselines.py  coupling.py  methods_for_paper.md  observables.py  plots.py  plots_schematic.py  reservoir.py  results_interpretation.md  run_all.py  summary.md  tasks.py  units.py
figures/: figures_for_deepseek.md  summary.json
figures_v2/: summary.json
papers/: paper1_corc_cn.md  paper1_corc_en.md  paper2_agsc_cn.md  paper2_agsc_en.md
src/: App.tsx  mockData.ts  types.ts
src/components/: AiCard.tsx  KOLDrawer.tsx  KpiCard.tsx  Layout.tsx  Nav.tsx  PipelineTable.tsx  RiskAlert.tsx  StatusBadge.tsx  Timeline.tsx
src/pages/: CampaignDetail.tsx  CampaignList.tsx  Dashboard.tsx  PMSummary.tsx  PreviewReview.tsx
